--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,24 @@
+name = "InvasivePredation"
+uuid = "1a22f0fb-bfb0-45d5-8097-cdff00962031"
+authors = ["Rafael Schouten <rafaelschouten@gmail.com>"]
+version = "0.1.0"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DynamicGrids = "a5dba43e-3abc-5203-bfc5-584ca68d3f5b"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 LandscapeChange = "10a95938-cbff-4ff0-a2a3-33d289cf79a5"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationNLopt = "4e6fcdb7-1186-4e1f-a706-475e75c168bb"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
