--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,19 @@ authors = ["Rafael Schouten <rafaelschouten@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+BayesianTools = "196d93e9-2b0a-59bc-85dd-07b4a30d24dc"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DynamicGrids = "a5dba43e-3abc-5203-bfc5-584ca68d3f5b"
+FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 LandscapeChange = "10a95938-cbff-4ff0-a2a3-33d289cf79a5"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
