--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 LandscapeChange = "10a95938-cbff-4ff0-a2a3-33d289cf79a5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
