--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["Rafael Schouten <rafaelschouten@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dispersal = "8797f018-3445-11e9-3969-c13eb94a0661"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DynamicGrids = "a5dba43e-3abc-5203-bfc5-584ca68d3f5b"
 FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
@@ -17,11 +19,14 @@ InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 LandscapeChange = "10a95938-cbff-4ff0-a2a3-33d289cf79a5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationNLopt = "4e6fcdb7-1186-4e1f-a706-475e75c168bb"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
