update and netural landscape model

--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
+NeutralLandscapes = "71847384-8354-4223-ac08-659a5128069f"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationNLopt = "4e6fcdb7-1186-4e1f-a706-475e75c168bb"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
