--- a/Project.toml
+++ b/Project.toml
@@ -34,4 +34,5 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Stencils = "264155e8-78a8-466a-aa59-c9b28c34d21a"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
