--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 InvertedIndices = "41ab1584-1d38-5bbf-9106-f11c6c58b48f"
 LandscapeChange = "10a95938-cbff-4ff0-a2a3-33d289cf79a5"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 ModelParameters = "4744a3fa-6c31-4707-899e-a3298e4618ad"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
